fix overflow styling for lists

--- a/src/components/curing-pages/Sensors-list-page/Sensors-list/list.css
+++ b/src/components/curing-pages/Sensors-list-page/Sensors-list/list.css
@@ -1,10 +1,11 @@
 .list {
   display: flex;
-  flex-flow: column wrap;
-  justify-content: space-between;
-  align-content: center;
+  flex-direction: column;  
+  align-items: center;
   width: 100%;
-  padding-top: 20px;
+  padding-top: 20px;  
+  overflow-y: scroll;
+  height: 550px;
 }
 
 .list-item {
